Cambios en la configuracion gradle-wrapper.properties

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -3,4 +3,18 @@ distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://localhost/distributions/gradle-6.3-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-all.zip
+
+
+#===============>>>>>> distributionUrl=http\://localhost/distributions/gradle-6.3-all.zip
+#Esta linea la utilizo para cargar la distribucion gradle desde mi servidor local. Lo hago
+#para ahorrar dato y evitar que se descargue el archivo cada vez que cree uno nuevo. Los pasos
+#para hacerlo son los siguientes:
+#1- Instalar XAMP
+#2- Buscar en la direccion de instalacion carpeta llamada htdocs
+#3- Dentro de htdocs crear nueva carpeta con nombre 'distributions'
+#4- Destro de 'distributions' pegar el archivo 'gradle-6.3-all.zip' previamente descargado
+#5- Cambiar url 'https\://services.gradle.org/distributions/gradle-6.3-all.zip' por esta
+#'http\://localhost/distributions/gradle-6.3-all.zip'
+
+
